--- a/css/reveal.css
+++ b/css/reveal.css
@@ -11,8 +11,17 @@
  *********************************************/
  
  p.normal {
-	font-family: "Times New Roman", Times, serif;
-	font-size:14px;
+	font-family: "Times New Roman", Times, serif !important;
+	text-align: left !important;
+	font-size:20px !important;
+	line-height:1 !important;
+}
+
+ ul.normal {
+	font-family: "Times New Roman", Times, serif !important;
+	text-align: left !important;
+	font-size:20px !important;
+	line-height:1 !important;
 }
  
 /*********************************************
